hphp/test/zend/bad/ext/soap/tests/bugs/bug44686.php
<?php
new SoapClient(dirname(__FILE__) . "/bug44686.wsdl");
echo "ok\n";
?>